--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@pinecone-database/pinecone": "^0.1.6",
+    "@langchain/core": "^0.2.31",
+    "@langchain/openai": "^0.2.8",
+    "@langchain/pinecone": "^0.0.9",
+    "@pinecone-database/pinecone": "^3.0.2",
     "@types/node": "20.4.10",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
@@ -17,7 +20,7 @@
     "clsx": "^2.0.0",
     "debug": "^4.3.4",
     "follow-redirects": "^1.15.2",
-    "langchain": "^0.0.127",
+    "langchain": "^0.2.17",
     "next": "13.4.13",
     "pinecone-client": "^1.1.0",
     "postcss": "8.4.27",
