--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "bcryptjs": "^2.4.3",
     "clsx": "^2.0.0",
     "debug": "^4.3.4",
     "follow-redirects": "^1.15.2",
     "langchain": "^0.2.17",
+    "mongoose": "^8.6.0",
     "next": "13.4.13",
+    "next-auth": "^4.24.7",
     "pinecone-client": "^1.1.0",
     "postcss": "8.4.27",
     "react": "18.2.0",
@@ -32,6 +35,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "encoding": "^0.1.13"
   }
 }
